Fix CBZ: do not include the first page twice - The first page was included twice in CBZ: once for the cover, once for   the first page; now, the cover is tagged as 'fake' when it is the   first page, and is not inserted into the CBZ